Swagger: Added GET & POST /orders, Prevented Duplicates, Auth Check, GET & PATCH /orders{id}
